--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+.idea/*.iml
